[package]
name = "cutlass"
version = "0.1.0"
authors = ["Akshay <nerdypepper@tuta.io>"]
edition = "2018"
description = "Macro based library to take the boilerplate out of configuration handling"
readme = "readme.md"
repository = "https://github.com/nerdypepper/cutlass"
license = "MIT"
keywords = ["curry", "currying", "macro", "functional", "haskell"]

[dependencies]
proc-macro2 = "1.0.9"
quote = "1.0"

[dependencies.syn]
version = "1.0"
features = ["full"]

[lib]
proc-macro = true
